# hello_triangle

./: .gitignore  CMakeLists.txt
include/: camera.h  shader.h
shaders/: shader.frag  shader.vert
src/: camera.cpp  main.cpp  shader.cpp
